[package]
name = "mmf_parser"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Yamaha SMAF File Parser"
homepage = "https://github.com/Pusungwi/mmf_parser/"
documentation = "https://docs.rs/mmf_parser"
repository = "https://github.com/Pusungwi/mmf_parser/"
readme = "README.md"
keywords = ["library", "music", "smaf", "mmf"]
include = ["src/*.rs", "Cargo.toml"]
exclude = ["*.mmf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
byteorder = "1.4.3"
hound = "3"

[dependencies.bitflags]
version = "2.11.0"
